introduction to newsletter

--- a/storefront-reference-architecture-master/cartridges/app_storefront_base/cartridge/templates/resources/account.properties
+++ b/storefront-reference-architecture-master/cartridges/app_storefront_base/cartridge/templates/resources/account.properties
@@ -78,3 +78,4 @@ email.msg.edited.body1=Your account has been successfully edited. You can visit 
 email.msg.edited.body2=This is an automatically generated email, please do not reply.
 
 msg.newpassword.redirect=This page should automatically redirect you to reset your password. If not, click Continue.
+header.greeting= ciao {0}{1}
