--- a/storefront-reference-architecture-master/cartridges/app_storefront_custom/cartridge/templates/resources/forms.properties
+++ b/storefront-reference-architecture-master/cartridges/app_storefront_custom/cartridge/templates/resources/forms.properties
@@ -1,2 +1,10 @@
-training.form.title.submit=Calzedonia Training Form (Submit)
-training.form.title.edit=Calzedonia Training Form (Edit)
+label.input.firstname.profile=First Name
+label.input.lastname.profile=Last Name
+label.input.email.profile=Email
+
+error.message.required=This field is required.
+error.message.50orless=Must be 50 characters or less.
+error.message.parse.email.profile.form=Please enter a valid E-Mail address
+
+text.newsletter=Newsletter
+
